# One2All-paddle

./: .gitignore  demo.py  main.py  pyproject.toml  test_template.py
.trae/rules/: tech.md
inference_services/: service_svc_1771145762_4c450395.py  service_svc_1771808293_0f7c3384.py
templates/: inference_service.py.j2
tests/: test_filter_training.py  test_real_training.py  test_train_api.py
tests/dataset/: annotations.json
utils/: augmentation.py  deployer.py  messaging.py  onnx_converter.py  template_matcher.py  trainer.py
