[project]
name = "one2all-paddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.115.12",
    "paddlepaddle-gpu==3.0.0",
    "setuptools>=80.9.0",
    "uvicorn>=0.34.3",
    "opencv-contrib-python",
    "pypdfium2",
    "scikit-image",
    "pydantic",
    "paddlex",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle" }
paddlex = { path = "./PaddleX" }
