[project]
name = "one2all-paddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.115.12",
    "paddlepaddle-gpu==3.0.0",
    "setuptools>=80.9.0",
    "uvicorn>=0.34.3",
    "opencv-contrib-python",
    "numpy<2",
    "pypdfium2",
    "scikit-image",
    "pydantic",
    "paddlex",
    "paddle2onnx>=2.1.0",
    "onnxsim>=0.5.0",
    "paddleseg>=2.8.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.16.0,<1.18.0",
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "Pillow>=10.0.0",
    "python-multipart>=0.0.22",
    "jinja2>=3.1.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle" }
paddlex = { path = "./PaddleX" }

[tool.uv]
index-strategy = "unsafe-best-match"
